Update service image source for better quality

--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
             <p>Complete professional printing solutions with precision and quality in every step. We handle all types of printing, from clothing prints to posters and custom designs.</p>
         </div>
         <div class="service-image">
-            <img src="Images/ourservices.jfif" alt="Our Services" class="service-placeholder">
+            <img src="Images/ourservices.jpg" alt="Our Services" class="service-placeholder">
         </div>
     </section>
 
